--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>SyntheraQr</title>
 <meta name="description" content="Ultra-modern QR code generator: customizable, instant preview, clean design.">
-<link rel="shortcut icon" href="logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
 <link crossorigin href="https://fonts.gstatic.com/" rel="preconnect"/>
 <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Inter:wght@400;500;600;700&amp;family=Noto+Sans:wght@400;500;600;700" onload="this.rel='stylesheet'" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
