--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>SyntheraQr</title>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E95GGNS9CN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E95GGNS9CN');
+</script>
 <meta name="description" content="Ultra-modern QR code generator: customizable, instant preview, clean design.">
 <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
 <link crossorigin href="https://fonts.gstatic.com/" rel="preconnect"/>
