--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>SyntheraQr</title>
+<title>SyntheraQR – Instant, Ultra-Modern QR Code Generatorr</title>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-E95GGNS9CN"></script>
 <script>
@@ -13,7 +13,21 @@
 
   gtag('config', 'G-E95GGNS9CN');
 </script>
+
+<meta property="og:title" content="SyntheraQR – Ultra-modern QR Code Generator">
+<meta property="og:description" content="Create customizable QR codes instantly with SyntheraQR. Clean, sleek, and free online tool.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://goldstac.github.io/SyntheraQr/">
+<meta property="og:image" content="https://goldstac.github.io/SyntheraQr/logo.png">
+<meta property="og:site_name" content="SyntheraQR">  
 <meta name="description" content="Ultra-modern QR code generator: customizable, instant preview, clean design.">
+<meta name="keywords" content="QR code, QR generator, QR creator, SyntheraQR, custom QR, online QR code, free QR codes, online qr code, qr code online">
+<meta name="author" content="SyntheraQR Team">
+<meta name="robots" content="index, follow">
+<meta name="language" content="en">
+<meta name="rating" content="general">
+<meta name="revisit-after" content="7 days">
+
 <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
 <link crossorigin href="https://fonts.gstatic.com/" rel="preconnect"/>
 <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Inter:wght@400;500;600;700&amp;family=Noto+Sans:wght@400;500;600;700" onload="this.rel='stylesheet'" rel="stylesheet"/>
