--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>SyntheraQR – Instant, Ultra-Modern QR Code Generatorr</title>
+<title>SyntheraQR – Instant, Ultra-Modern QR Code Generator</title>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-E95GGNS9CN"></script>
 <script>
