--- a/index.html
+++ b/index.html
@@ -155,32 +155,17 @@
   </div>
 </main>
 
-<!-- Footer with Privacy Link -->
+<!-- Footer with Privacy Link Only -->
 <footer class="border-t border-solid border-gray-200 bg-gray-100 py-8">
   <div class="mx-auto max-w-7xl px-4 text-center sm:px-6 lg:px-8">
     <p class="text-sm text-gray-500">
-      <a href="#privacy-policy"
+      <a href="privacy.html"
          class="font-medium text-gray-700 hover:text-gray-900 transition-colors">
          Privacy Policy
       </a>
     </p>
   </div>
 </footer>
-
-<!-- Privacy Policy Section -->
-<section id="privacy-policy" class="bg-white py-16">
-  <div class="mx-auto max-w-3xl px-4 sm:px-6 lg:px-8 text-center">
-    <h2 class="text-3xl font-bold tracking-tight text-gray-900 mb-6">Privacy Policy</h2>
-    <p class="text-lg text-gray-700 leading-relaxed mb-4">
-      At <strong>SyntheraQr</strong>, we value your privacy and are committed to protecting it.
-    </p>
-    <p class="text-lg text-gray-700 leading-relaxed">
-      <strong>We do not collect, store, or share any personal data</strong> from our users.
-      All QR code generation happens directly in your browser. 
-      No text, links, or color settings are sent to any server.
-    </p>
-  </div>
-</section>
 </div>
 
 <script>
